<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="1"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Send_feedback"
        android:orderInCategory="1"
        android:title="@string/send_feedback"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/delete_account"
                android:orderInCategory="3"
                android:title="@string/delete_account"
                app:showAsAction="never"/>
            <item
                android:id="@+id/change_password"
                android:orderInCategory="3"
                android:title="@string/change_password"
                app:showAsAction="never"/>
            <item
                android:id="@+id/change_username"
                android:orderInCategory="1"
                android:title="@string/change_username"
                app:showAsAction="never"/>

        </menu>
    </item>
</menu>