<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:background="@drawable/box"
    android:backgroundTint="#C0B9C0">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/select_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:weightSum="100"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/Take_photo"
            android:layout_weight="50"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/box_grey">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/my_red1"
                android:text="@string/take_photo"
                android:layout_gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Select_image"
            android:layout_weight="50"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/box_grey">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_image_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/my_red1"
                android:layout_marginTop="10dp"
                android:text="@string/select_from_gallery"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/Cancel"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>