<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:paddingBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_fileName="doc.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/gbutton"
        android:onClick="Google_Login"
        android:layout_width="330dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73"
        android:background="@drawable/google_bt"
        android:elevation="10dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:src="@drawable/google"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:contentDescription="@string/todo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fb_button"
        android:onClick="fblogin"
        android:layout_width="330dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"
        android:background="@drawable/fb_bt"
        android:elevation="10dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:src="@drawable/fb"
            android:paddingStart="25dp"
            android:foregroundGravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:contentDescription="@string/todo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            android:text="@string/sign_in_with_facebook"
            android:textAllCaps="false"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:id="@+id/Edoc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soft_doc"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_button"
        android:onClick="Login1"
        android:layout_width="330dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        android:background="@drawable/button_shape"
        android:elevation="10dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:src="@drawable/icon"
            android:paddingStart="25dp"
            android:foregroundGravity="center"
            android:contentDescription="@string/todo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF"
            android:text="@string/login_at_soft_doc"
            android:textAllCaps="false"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/button_back"
        android:onClick="Register1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/new_user"
            android:textAllCaps="false"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>