<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/box_grey"
        tools:ignore="UselessParent">
        <com.airbnb.lottie.LottieAnimationView

            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="tickdone.json"
            app:lottie_loop="true"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/customtv"
            android:gravity="center_horizontal"
            android:text="@string/username_changes_successfully"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:textSize="15sp"
            android:id="@+id/customtv1"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/restart_application_now"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/buttonOk"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="#FFF"
                tools:ignore="ButtonStyle,RtlHardcoded" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>