<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/box_grey"
        tools:ignore="UselessParent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="error.json"
            app:lottie_loop="true"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/customtv"
            android:text="@string/email_not_verified_click_to_sent"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttoncancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#FFF"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:id="@+id/buttonsent"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/resent_verification_email"
                android:textAllCaps="false"
                android:textColor="#FFF"
                tools:ignore="ButtonStyle,RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
